--- a/stile.css
+++ b/stile.css
@@ -1,1 +1,7 @@
-
+.advinha{
+    border: 2px solid #000; /* Define a borda da caixa */
+padding: 10px;          /* Espaçamento interno */
+margin: 20px;          /* Espaçamento externo */
+border-radius: 5px;    /* Bordas arredondadas */
+background-color: #f9f9f9; /* Cor de fundo */
+}
