--- a/stile.css
+++ b/stile.css
@@ -2,6 +2,12 @@
     border: 2px solid #000; /* Define a borda da caixa */
 padding: 10px;          /* Espaçamento interno */
 margin: 20px;          /* Espaçamento externo */
-border-radius: 5px;    /* Bordas arredondadas */
-background-color: #f9f9f9; /* Cor de fundo */
+border-radius: 5px;    /* Bordas arredondadas (opcional) */
+background-color: #f9f9f9; /* Cor de fundo (opcional) */
+}
+/* estilos.css */
+#imagemPato {
+display: none; /* Esconde a imagem do pato */
+max-width: 300px; /* Define um tamanho máximo para a imagem */
+box-shadow: #000;
 }
